[tool.poetry]
name = "artemis_client"
version = "0.0.2"
description = "A client for ls1tum/Artemis"
authors = ["Lucas Alber <lucasd.alber@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9"
aiohttp = "^3.8.1"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
tox = "^3.25.1"
typeguard = "^2.13.3"
flake8 = "^5.0.4"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

log_cli = true
log_cli_level = "CRITICAL"
log_cli_format = "%(message)s"

log_file = "pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"