[tool.poetry]
name = "artemis_client"
version = "1.0.0"
description = "A client for ls1tum/Artemis"
authors = ["Lucas Alber <lucasd.alber@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9"
aiohttp = "^3.8.4"
typing-extensions = "^4.4.0"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
tox = "^3.25.1"

[tool.poetry.group.test.dependencies]
typeguard = "^2.13.3"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
pytest-aiohttp = "^1.0.4"
pytest-dependency = "^0.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

log_cli = true
log_cli_level = "CRITICAL"
log_cli_format = "%(message)s"

log_file = "pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"