[metadata]
name = artemis_client
version = 0.0.2
author = Lucas Alber
author_email = dev@lalber.org
description = A client for ls1tum/Artemis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kit-sdq/artemis_client
project_urls =
    Bug Tracker = https://github.com/kit-sdq/artemis_client/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires = 
    aiohttp

[options.packages.find]
where = src

[flake8]
max-line-length = 88
extend-ignore = E203